// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Kbd checkGrammar=false 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd checkGrammar=true 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd checkHighlight=false 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd checkHighlight=true 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd checkSpaces=false 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd checkSpaces=true 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd className="my-classname" 1`] = `
<kbd
  className="uu5-bricks-kbd my-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd content="This is Content from ContentMixin" 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
>
  This is Content from ContentMixin
</kbd>
`;

exports[`UU5.Bricks.Kbd content=12345 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
>
  12345
</kbd>
`;

exports[`UU5.Bricks.Kbd controlled=false 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd controlled=true 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd default props 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd disabled=false 1`] = `
<kbd
  className="uu5-bricks-kbd"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd disabled=true 1`] = `
<kbd
  className="uu5-bricks-kbd"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd docKit examples UU5.Bricks.Kbd should render without crash 1`] = `
<kbd
  className="uu5-bricks-kbd"
>
  Enter
</kbd>
`;

exports[`UU5.Bricks.Kbd dynamic=false 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd dynamic=true 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd hidden=false 1`] = `
<kbd
  className="uu5-bricks-kbd"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd hidden=true 1`] = `
<kbd
  className="uu5-bricks-kbd"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd id="myId" 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="myId"
/>
`;

exports[`UU5.Bricks.Kbd ignoreHTML=false 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd ignoreHTML=true 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd mainAttrs=undefined 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd name="myName" 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd noIndex=false 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd noIndex=true 1`] = `
<kbd
  className="uu5-bricks-kbd uu5-noindex"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd selected=false 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd selected=true 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd style="padding:8px; borderRadius: 2px" 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.Kbd style={"backgroundColor":"red","color":"blue"} 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Kbd textCorrector=false 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd textCorrector=true 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Kbd tooltip="My Tooltip" 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
/>
`;
